--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.1.1
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.15.3
+  cloud_firestore: ^4.13.6
+  shared_preferences: ^2.2.2
+  google_sign_in: ^6.1.6
+  google_sign_in_android: ^6.1.6
+  google_sign_in_platform_interface: ^2.3.2
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +64,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/google_logo.png
+    - assets/ctis_logo.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
