--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_sign_in: ^6.1.6
   google_sign_in_android: ^6.1.6
   google_sign_in_platform_interface: ^2.3.2
+  insta_image_viewer: ^1.0.4
 
 dev_dependencies:
   flutter_test:
