--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   sqflite: ^2.3.2
   sqflite_common_ffi: ^2.3.2+1
   path: ^1.8.3
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
